# intellij-dollar-sign-bug

./: .gitignore  WORKSPACE  bazel-intellij-dollar-sign-bug  maven_install.json
lib/scrooge/: BUILD.bazel  scrooge.bzl
lib/scrooge/scripts/: generate_scala_files.sh
scrooge_test/: BUILD.bazel
scrooge_test/src/main/scala/com/example/playground/: Runner.scala
scrooge_test/src/main/thrift/: Foo.thrift
